GH-741: fixed a bug in resetting the logging level for logger endpoints. (#742)